# android2d

./: gradlew  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/engine/: CircleCollider.cpp  CircleCollider.h  application.cpp  application.h  collider.cpp  collider.h  ifilesmanager.h  igame.h  irenderer.h  iwindow.h  physics.cpp  physics.h  rectcollider.cpp  rectcollider.h  sprite.cpp  sprite.h  statictypes.h  texture.cpp  texture.h
app/src/main/cpp/engine/actions/: action.cpp  action.h  callfunction.cpp  callfunction.h  delaytime.cpp  delaytime.h  easeInout.cpp  easeInout.h  easein.cpp  easein.h  easeout.cpp  easeout.h  moveby.cpp  moveby.h  moveto.cpp  moveto.h  scaleby.cpp  scaleby.h  scaleto.cpp  scaleto.h  sequence.cpp  sequence.h
app/src/main/cpp/engine/graphics/: iwindow.h  scene.cpp  scene.h  sprite.cpp  sprite.h  spritenode.cpp  spritenode.h  texture.cpp  texture.h  texturecache.cpp  texturecache.h
app/src/main/cpp/engine/physics/: circlecollider.cpp  circlecollider.h  collider.cpp  collider.h
app/src/main/cpp/engine/platform/: androidgleswindow.cpp  androidgleswindow.h  application.cpp  application.h  glesrenderer.cpp  glesrenderer.h  native-lib.cpp  native-lib.h
app/src/main/cpp/engine/utils/: clock.cpp  clock.h  color.cpp  color.h  fileutils.cpp  fileutils.h  floatrandomset.cpp  floatrandomset.h  intrandomset.cpp  intrandomset.h  lodepng.cpp  lodepng.h  logger.h  (+9 more)
app/src/main/cpp/game/: game.cpp  game.h  obstacle.cpp  obstacle.h  player.cpp  player.h
app/src/main/cpp/platform/: androidfilemanager.cpp  androidfilemanager.h  androidwindow.cpp  androidwindow.h  application.cpp  application.h  native-lib.cpp  native-lib.h  oglesrenderer.cpp  oglesrenderer.h  renderer.cpp  renderer.h  texture.cpp  texture.h
app/src/main/cpp/utils/: clock.cpp  clock.h  floatrandomset.cpp  floatrandomset.h  lodepng.cpp  lodepng.h  logger.h  mat4.cpp  mat4.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/values/: strings.xml
(+2 files in other folders)
